# IRIS

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  iris
Debug/src/.deps/: ActivationFunctions.Po  ArgDecs.Po  AutomataEdge.Po  AutomataSkeleton.Po  BitmapStreamer.Po  Buffer.Po  BufferConvertor.Po  ByteStreamer.Po  ColorSpaces.Po  CommandBinder.Po  CommandFunctionList.Po  Correlator.Po  EdgeDetectors.Po  FrontEnd.Po  GenericSOM_Neuron.Po  HoughTransform.Po  Interpreter.Po  IrisEnv.Po  KernelMatrix.Po  Matrix4x4.Po  MiscRoutines.Po  ModelBuilder.Po  NeuronMap.Po  NonkernelAlgorithms.Po  QuadtreeCore.Po  QuadtreeSegmenter.Po  RuntimeDemo.Po  RuntimePool.Po  SOM_Trainer.Po  Sensor3D.Po  SequenceAnalyser.Po  ShapeSampler.Po  SpecialKernels.Po  StereoVision.Po  VarianceTester.Po  Vert3D.Po  Voxel.Po  WordFinder.Po  WorldSpace.Po  main.Po  (+1 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: ActivationFunctions.cpp  ActivationFunctions.h  ArgDecs.cpp  ArgDecs.h  AutomataEdge.cpp  AutomataEdge.h  AutomataSkeleton.cpp  AutomataSkeleton.h  BitmapStreamer.cpp  BitmapStreamer.h  Buffer.cpp  Buffer.h  BufferConvertor.cpp  BufferConvertor.h  ByteStreamer.cpp  ByteStreamer.h  ColorSpaces.cpp  ColorSpaces.h  CommandBinder.cpp  CommandBinder.h  CommandFunctionList.cpp  CommandFunctionList.h  Correlator.cpp  Correlator.h  EdgeDetectors.cpp  EdgeDetectors.h  FrontEnd.cpp  FrontEnd.h  GenericSOM_Neuron.cpp  GenericSOM_Neuron.h  HoughTransform.cpp  HoughTransform.cpp~  HoughTransform.h  Interpreter.cpp  Interpreter.h  IrisEnv.cpp  IrisEnv.cpp~  IrisEnv.h  KernelMatrix.cpp  KernelMatrix.h  (+49 more)
