## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = iris

iris_SOURCES = \
	ActivationFunctions.h \
	VarianceTester.cpp \
	VarianceTester.h \
	ArgDecs.cpp \
	AutomataSkeleton.cpp \
	Buffer.cpp \
	AutomataEdge.h \
	BufferConvertor.h \
	BitmapStreamer.h \
	BufferConvertor.cpp \
	ArgDecs.h \
	AutomataSkeleton.h \
	AutomataEdge.cpp \
	BitmapStreamer.cpp \
	Buffer.h \
	CommandBinder.h \
	FrontEnd.h \
	ColorSpaces.h \
	ByteStreamer.h \
	Correlator.cpp \
	Correlator.h \
	EdgeDetectors.cpp \
	ColorSpaces.cpp \
	CommandFunctionList.cpp \
	ByteStreamer.cpp \
	HoughTransform.cpp \
	CommandFunctionList.h \
	CommandBinder.cpp \
	EdgeDetectors.h \
	Matrix4x4.h \
	HoughTransform.h \
	ModelBuilder.cpp \
	Interpreter.cpp \
	KernelMatrix.cpp \
	KernelMatrix.h \
	Matrix4x4.cpp \
	MiscRoutines.cpp \
	ModelBuilder.h \
	Interpreter.h \
	MiscRoutines.h \
	QuadtreeSegmenter.cpp \
	SpecialKernels.cpp \
	NonkernelAlgorithms.h \
	ShapeSampler.h \
	SpecialKernels.h \
	Sensor3D.h \
	Sensor3D.cpp \
	ShapeSampler.cpp \
	QuadtreeCore.cpp \
	newmath.cpp \
	NonkernelAlgorithms.cpp \
	SequenceAnalyser.cpp \
	RuntimePool.cpp \
	newmath.h \
	SequenceAnalyser.h \
	QuadtreeSegmenter.h \
	WorldSpace.h \
	Voxel.cpp \
	WordFinder.h \
	Vert3D.cpp \
	Voxel.h \
	WorldSpace.cpp \
	StereoVision.h \
	Vert3D.h \
	WordFinder.cpp \
	FrontEnd.cpp \
	RuntimePool.h \
	IrisEnv.h \
	IrisEnv.cpp \
	StereoVision.cpp \
	ActivationFunctions.cpp \
	NeuronMap.cpp \
	GenericSOM_Neuron.cpp \
	GenericSOM_Neuron.h \
	QuadtreeCore.h \
	NeuronMap.h \
	RuntimeDemo.cpp \
	SOM_Trainer.cpp \
	SOM_Trainer.h

iris_LDFLAGS = 

iris_LDADD = 

